見た目の調整

--- a/teaolive/style.css
+++ b/teaolive/style.css
@@ -5,8 +5,9 @@
 }
 
 .teaolieve-it {
-    margin-left: 3em;
     font-size: 1em;
+    margin-left: 3em;
+    margin-bottom: 1em;
 }
 
 .teaolive-success {
